header nav fixed again, aligned on adaptive

--- a/css/mi_style.scss
+++ b/css/mi_style.scss
@@ -80,7 +80,7 @@
 
   .nav-logo {
     display: block;
-    position: relative;
-    top: 20px;
+    position: relative !important;
+    top: 20px !important;
   }
 }
