--- a/css/style.css
+++ b/css/style.css
@@ -223,8 +223,8 @@
 
   .nav-logo {
     display: block;
-    position: relative;
-    top: 20px; } }
+    position: relative !important;
+    top: 20px !important; } }
 section.numbers {
   padding: 101px 15px;
   background-color: #10c9c3;
@@ -691,7 +691,8 @@ img {
     position: absolute;
     top: 0;
     color: white;
-    z-index: 1; }
+    z-index: 1;
+    transition: 3s; }
   .gallery .foto:hover::before {
     content: "\f06e";
     font-weight: 900;
@@ -705,21 +706,22 @@ img {
     left: 49%;
     margin: auto;
     color: white;
-    z-index: 2; }
-.gallery a {
-  display: inline-block;
-  width: 100%;
-  background-color: #f5f5f5;
-  text-decoration: none;
-  text-align: center;
-  font-family: Montserrat, sans-serif;
-  text-transform: uppercase;
-  color: #8e8e8e;
-  font-size: 12px;
-  padding-top: 45px;
-  padding-bottom: 45px; }
-  .gallery a:hover {
-    color: #10c9c3; }
+    z-index: 2;
+    transition: 3s; }
+  .gallery .foto a {
+    display: inline-block;
+    width: 100%;
+    background-color: #f5f5f5;
+    text-decoration: none;
+    text-align: center;
+    font-family: Montserrat, sans-serif;
+    text-transform: uppercase;
+    color: #8e8e8e;
+    font-size: 12px;
+    padding-top: 45px;
+    padding-bottom: 45px; }
+    .gallery .foto a:hover {
+      color: #10c9c3; }
 
 .footer {
   background-color: #141414; }
